templates/vpc-base.yml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC Template that creates vpc with 2 private and 2 public subnets.

Parameters:
  environment:
    Description: Development Envrionment Name
    Type: String
    Default: dev
    AllowedValues:
    - dev
    - stage
    - qa
    - prod
    
  uniqueIdentifier:
    Description: A unique identifier to associate who this pipeline is for
    Type: String
    Default: uniqueId
    
  technicalContactEmail:
    Description: Email address to contact for issues/questions about bucket
    Type: String

  vpcCidrBlock:
    Description: The CIDR block to use for the vpc
    Type: String
    Default: 10.0.0.0/16
    
  publicSubnet1CIDR:
    Description: CIDR to use for public subnet1
    Type: String
    Default: 10.0.3.0/24
 
  publicSubnet2CIDR:
    Description: CIDR to use for public subnet2
    Type: String
    Default: 10.0.4.0/24
    
    
  privateSubnet1CIDR:
    Description: CIDR to use for private subnet1
    Type: String
    Default: 10.0.1.0/24

  privateSubnet2CIDR:
    Description: CIDR to use for private subnet2
    Type: String
    Default: 10.0.2.0/24

  publicSubnetAZ1:
    Description: AZ to use for public subnet
    Type: AWS::EC2::AvailabilityZone::Name

  publicSubnetAZ2:
    Description: AZ to use for the public subnet
    Type: AWS::EC2::AvailabilityZone::Name

  privateSubnetAZ1:
    Description: AZ to use for the private subnet
    Type: AWS::EC2::AvailabilityZone::Name

  privateSubnetAZ2:
    Description: AZ to use for the private subnet
    Type: AWS::EC2::AvailabilityZone::Name

  domainName:
    Description: Domain name to use for dhcp options
    Type: String
    
    
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref vpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - {Key: Name, Value: !Join [ "-" , [ !Ref uniqueIdentifier, !Ref environment,  "vpc" ]]}
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}

  DHCPOptions:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !Ref domainName
      DomainNameServers:
      - AmazonProvidedDNS
      Tags:
      - {Key: Name, Value: !Join [ "-" , [ !Ref uniqueIdentifier, !Ref environment, "DHCP-Options-Set" ]]}
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}

  DHCPOptionsAssociation:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VPC
      DhcpOptionsId: !Ref DHCPOptions

  publicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref publicSubnet1CIDR
      AvailabilityZone: !Ref publicSubnetAZ1
      Tags:
      - {Key: Name, Value: !Join [ "-" , [ !Ref uniqueIdentifier, !Ref environment, "Public-Subnet-1" ]]}
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}
    
  publicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref publicSubnet2CIDR
      AvailabilityZone: !Ref publicSubnetAZ1
      Tags:
      - {Key: Name, Value: !Join [ "-" , [ !Ref uniqueIdentifier, !Ref environment, "Public-Subnet-2" ]]}
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}
  
  privateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref privateSubnet1CIDR
      AvailabilityZone: !Ref privateSubnetAZ1
      Tags:
      - {Key: Name, Value: !Join [ "-" , [ !Ref uniqueIdentifier, "Private-Subnet-1" ]]}
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}
      
    
  privateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref privateSubnet2CIDR
      AvailabilityZone: !Ref privateSubnetAZ2
      Tags:
      - {Key: Name, Value: !Join [ "-" , [ !Ref uniqueIdentifier, "Private-Subnet-2" ]]}
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}
      
      
  internetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - {Key: Name, Value: !Join [ "-", [ !Ref uniqueIdentifier, !Ref environment, "InternetGateway" ]] }
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}
      
      
  VPCGatewayAttachment:
    DependsOn: internetGateway
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref internetGateway
      
  NatGateway0EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway0:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway0EIP.AllocationId
      SubnetId: !Ref publicSubnet1
      Tags:
      - {Key: Name, Value: !Join [ "-", [ !Ref uniqueIdentifier, !Ref environment, "NAT-Gateway" ]] }
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}

      
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - {Key: Name, Value: !Join [ "-", [ !Ref uniqueIdentifier, !Ref environment, "PublicRouteTable" ]] }
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}
      
  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway
      
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1
      RouteTableId: !Ref PublicRouteTable

      
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet2
      RouteTableId: !Ref PublicRouteTable

  privateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - {Key: Name, Value: !Join [ "-", [ !Ref uniqueIdentifier, !Ref environment, "PrivateRouteTable" ]] }
      - {Key: CostCenter, Value: !Ref uniqueIdentifier}
      - {Key: TechnicalContactEmail, Value: !Ref technicalContactEmail}
      - {Key: environment, Value: !Ref environment}

  privateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway0

  privateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1
      RouteTableId: !Ref privateRouteTable
      
  privateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet2
      RouteTableId: !Ref privateRouteTable

  s3VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "*"
            Resource:
              - "arn:aws:s3:::dev-*/"
      RouteTableIds:
        - !Ref privateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC

Outputs:
  VPC:
    Description: the id of the vpc
    Value: !Ref VPC
    Export:
      Name: !Join [ "-", [ !Ref uniqueIdentifier, "vpc" ]]

  PrivateSubnet1:
    Description: Private Subnet 1 
    Value: !Ref privateSubnet1
    Export:
      Name: !Join [ "-", [ !Ref uniqueIdentifier, "private-subnet-1" ]]
      
  PrivateSubnet2:
    Description: Private Subnet 2
    Value: !Ref privateSubnet2
    Export:
      Name: !Join [ "-", [ !Ref uniqueIdentifier, "private-subnet-2" ]]
      
  PublicSubnet1:
    Description: Public Subnet 1 
    Value: !Ref publicSubnet1
    Export:
      Name: !Join [ "-", [ !Ref uniqueIdentifier, "public-subnet-1" ]]
      
  PublicSubnet2:
    Description: Public Subnet 2
    Value: !Ref publicSubnet2
    Export:
      Name: !Join [ "-", [ !Ref uniqueIdentifier, "public-subnet-2" ]]
